# MINI_FPSI

./: README.md
MINI_FPSI/: CMakeLists.txt  test.py  wan.sh  wan_test.py
MINI_FPSI/include/helper/: common.hpp
MINI_FPSI/src/: Alice.cpp  Bob.cpp
